增加对变更字段的监听逻辑
